# anatomical-compiler

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fm  FOUNDATIONS.md  MANUSCRIPT.md  MODEL_CARD.md  PHASE3_REPORT.md  README.md  REFERENCES.md  ROADMAP.md  STATUS.md  SYNTHETIC_MORPHOGENESIS.md  main.py  pyproject.toml
data/: CtxDiseaseGeneListsPLUS.RData  SonthaliaEtAl_SupplTable1_p7CtxDev_GeneLoadings.txt  disease_gene_lists.json  pollen_edges.csv  pollen_edges_full.csv
docs/: computational-roadmap.md  cure-audit.md  dgx-spark-setup.md  dgx-verifier-runbook.md  differentiable-cp.md  foundation-models.md
figures/: advanced_fidelity_results.json  anatomical_compiler_results.json  anthrobot_results.json  benchmark_standard.csv  benchmark_standard_summary.csv  comparison_table.md  dataset_inventory.json  dgx_real_run_2026-05-15.json  disease_enrichment_results.json  edge_prior_ablation.json  edge_prior_ablation.md  edge_prior_ablation_real.json  edge_prior_ablation_real.md  fleck_forward_results.json  gartner_results.json  kidney_modularity_results.json  lab1_sbml_verification.json  lab1_sbml_verification.md  lab3_real_results.json  lab3_real_results.md  lab3_real_results_alt.json  lab3_real_results_alt.md  lab4_real_results.json  lab4_real_results.md  lab6_measured_perturb_manifest.json  lab6_real_results.json  lab6_real_results.md  learning_regulome_results.json  liver_fidelity_results.json  microglia_track_results.json  neocortex_atlas_results.json  network_control_results.json  nitmb_modularity_report.json  perturb_eig_ablation.json  perturb_eig_ablation.md  phase3_multi_dataset_results.json  pollen_comparison_results.json  pollen_filtered_results.json  regenerative_flow_results.json  rmt_ablation_kidney_modularity.json  (+5 more)
hgx_prep/: __init__.py  cli.py  download.py  grn.py  io.py  normalize.py  pca.py  perturbation.py  registry.py  sctab_models.py  temporal.py
models/: README.md  lab1_negative_autoregulation.ant  lab1_negative_autoregulation.omex  lab1_negative_autoregulation.sbml  lab1_negative_autoregulation.sedml  lab1_repressilator.ant  (+12 more)
(+183 files in other folders)
