[project]
name = "organoid-hgx-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.10",
    "diffrax>=0.7.2",
    "hgx",
    "matplotlib>=3.10.8",
    "optax>=0.2.5",
    "pandas>=2.3.3",
    "ripser>=0.6.14",
    "scanpy>=1.12",
    "scipy>=1.17.1",
]

[tool.uv]
constraint-dependencies = [
    "llvmlite<0.46",  # no x86_64 macOS wheel for 0.46
    "numba<0.64",     # match llvmlite constraint
]

[tool.uv.sources]
hgx = { path = "../hgx" }
