[project]
name = "anatomical-compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.10",
    "cellxgene-census>=1.17.0",
    "devograph",
    "dhg",
    "diffrax>=0.7.2",
    "hgx",
    "huggingface-hub>=1.13.0",
    "jaxctrl",
    "leidenalg>=0.11.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.5",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyreadr>=0.5.6",
    "python-libcombine>=0.2.20",
    "python-libsbml>=5.21.0",
    "python-libsedml>=2.0.30",
    "pytorch-lightning>=2.6.1",
    "pytorch-tabnet>=4.1.0",
    "rdata>=1.0.0",
    "ripser>=0.6.14",
    "rpy2>=3.6.7",
    "scanpy>=1.12",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hgx_prep", "src/anatomical_compiler"]

[project.scripts]
hgx-prep = "hgx_prep.cli:main"

[tool.uv]
constraint-dependencies = [
    "llvmlite<0.46",  # no x86_64 macOS wheel for 0.46
    "numba<0.64",     # match llvmlite constraint
]

[tool.uv.sources]
hgx = { path = "../hgx" }
jaxctrl = { path = "../jaxctrl" }
dhg = { git = "https://github.com/iMoonLab/DeepHypergraph", rev = "b36d98c" }
devograph = { git = "https://github.com/m9h/devograph.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
